Bug 152155 - gtk3: Dropdown in Extension sidebar misplaced
Summary: gtk3: Dropdown in Extension sidebar misplaced
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
7.5.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.5.0 target:7.4.4 target:24.2.0
Keywords:
: 152590 (view as bug list)
Depends on:
Blocks:
 
Reported: 2022-11-21 13:50 UTC by Samuel Mehrbrodt
Modified: 2025-01-31 04:50 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
screenshot (143.92 KB, image/png)
2022-11-21 13:50 UTC, Samuel Mehrbrodt
Details
screenshot of recent 7.5 master build (139.21 KB, image/png)
2022-11-25 15:45 UTC, Stéphane Guillou (stragu)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Samuel Mehrbrodt 2022-11-21 13:50:24 UTC
Created attachment 183698 [details]
screenshot

1. Install WollMux.oxt from https://github.com/WollMux/WollMux/releases/tag/RELEASE_18.2.10 
2. Install WollMux Config to ~/.wollmux from https://github.com/WollMux/wollmux-config/releases/tag/v18.1.0
3. Open Writer
4. In the Sidebar, select Vorlagen->Formulare->Kurzmitteilung from the "WollMux" Deck -> A new document is opened which has the "Formular" Sidebar Deck open
5. Click on the Dropdown "Zustellvermerk" in the Sidebar

-> Dropdown is mispositioned.

Version: 7.5.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: deb7bc82de19ea8e20c767fdf21f9ba4feb5e9f0
CPU threads: 8; OS: Linux 5.19; UI render: default; VCL: gtk3
Locale: de-DE (de_DE.UTF-8); UI: en-US
Calc: CL threaded
Comment 1 Samuel Mehrbrodt 2022-11-21 13:51:51 UTC
Happens only with gtk3.
Comment 2 Rafael Lima 2022-11-21 18:03:42 UTC
Could this be a Wayland issue?
Comment 3 Caolán McNamara 2022-11-21 20:04:09 UTC
probably not, export GDK_BACKEND=x11 shows it too. It might be that somewhere we are translating coordinates to be relative to the wrong toplevel. Normally we want the toplevel window, but we probably want the toplevel plug/grid of the "embedded frame" that comprises the container for the sidebar extension contents.
Comment 4 Commit Notification 2022-11-22 16:48:35 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/15cdee0d846854b50dd04626b73499bef9305e00

Resolves: tdf#152155 use gtk's knowledge of relative widget positions

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2022-11-24 07:28:39 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/b534ee2e972711af2dbaadf2190813054adda902

Resolves: tdf#152155 use gtk's knowledge of relative widget positions

It will be available in 7.4.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Stéphane Guillou (stragu) 2022-11-25 15:45:38 UTC
Created attachment 183785 [details]
screenshot of recent 7.5 master build

Caolán, I can still see it misplaced in a build from today:

Version: 7.5.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 24d7431876e87eba700a9f141dc8e030143a92ad
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Am I missing something?
Comment 7 Commit Notification 2023-11-07 06:16:13 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/698935c220131bc761eb9cf25e01fa91087a788e

tdf#152155 vcl: fix gtk popup listbox positions on sidebar

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Roland Baudin 2024-06-27 09:02:39 UTC
This bug fix introduces a regression: see bug #160415 (https://bugs.documentfoundation.org/show_bug.cgi?id=160415)
Comment 9 Gabor Kelemen (Collabora) 2025-01-26 20:16:39 UTC
*** Bug 152590 has been marked as a duplicate of this bug. ***
Comment 10 jonsgough 2025-01-31 04:50:04 UTC
As this bug has been known about for 26 months, when is a fix likely to be released?